fix: auth minor changes
